--- a/.github/workflows/upload_data.yml
+++ b/.github/workflows/upload_data.yml
@@ -1,12 +1,11 @@
-name: DB Initialisation
-
+name: Upload Dataset Kaggle
 on:
   push:
     branches:
       - main
 
 jobs:
-  init_db:
+  upload_data_kaggle:
     runs-on: ubuntu-latest
 
     steps:
