--- a/.github/workflows/upload_data.yml
+++ b/.github/workflows/upload_data.yml
@@ -29,7 +29,7 @@ jobs:
           KAGGLE_JSON: ${{ secrets.KAGGLE_JSON }}
 
       - name: Update data in Kaggle
-        run: kaggle datasets version -p ../dataset/. -m "Updated data"
+        run: kaggle datasets version -p ./dataset/. -m "Updated data"
         
       - name: Save dependency cache
         uses: actions/cache@v2
