--- a/.github/workflows/upload_data.yml
+++ b/.github/workflows/upload_data.yml
@@ -1,8 +1,7 @@
 name: Upload Dataset Kaggle
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   upload_data_kaggle:
