--- a/.github/workflows/upload_data.yml
+++ b/.github/workflows/upload_data.yml
@@ -1,7 +1,8 @@
 name: Upload Dataset Kaggle
 on:
-  schedule:
-    - cron: '17 * * * *'
+  push:
+    branches:
+      - main
 
 jobs:
   upload_data_kaggle:
