--- a/.github/workflows/upload_data.yml
+++ b/.github/workflows/upload_data.yml
@@ -18,6 +18,9 @@ jobs:
           python-version: 3.x
 
       - name: Install Kaggle
+        run: google-chrome --version
+          
+      - name: Install Kaggle
         run: pip install kaggle
 
       - name: Install Pandas
