--- a/.github/workflows/upload_data.yml
+++ b/.github/workflows/upload_data.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install Selenium
         run: pip install selenium
 
+      - name: Install TEST
+        run: pip install undetected_chromedriver        
+
       - name: Create .kaggle directory
         run: mkdir -p /home/runner/.kaggle
 
