--- a/.github/workflows/upload_data.yml
+++ b/.github/workflows/upload_data.yml
@@ -30,7 +30,10 @@ jobs:
         run: pip install beautifulsoup4
 
       - name: Install Selenium
-        run: pip install selenium    
+        run: pip install selenium
+
+      - name: Perm Chrome
+        run: chmod +x chrome-driver/chromedriver
 
       - name: Create .kaggle directory
         run: mkdir -p /home/runner/.kaggle
